[gd_scene load_steps=11 format=3 uid="uid://baptw13ab6b8h"]

[ext_resource type="Script" uid="uid://carhfyoc7ro6" path="res://Scripts/basic_soldier.gd" id="1_6yrql"]
[ext_resource type="Texture2D" uid="uid://dr5jddhp1y6he" path="res://Assets/Images/SpriteSheets/Animations/soldier_1.png" id="1_scw6n"]
[ext_resource type="Script" uid="uid://dgplhh06wmsnq" path="res://Scripts/ComponentScripts/HealthComponent.gd" id="2_6yrql"]
[ext_resource type="Script" uid="uid://clpxtcfre43xh" path="res://Scripts/ComponentScripts/HurtBox.gd" id="3_4n3ff"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6yrql"]
radius = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_215r7"]
atlas = ExtResource("1_scw6n")

[sub_resource type="Animation" id="Animation_3a5bh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2xija"]
resource_name = "fire"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire_bullet"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_shell"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"ready_fire"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_23aan"]
_data = {
&"RESET": SubResource("Animation_3a5bh"),
&"fire": SubResource("Animation_2xija")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_slre4"]

[node name="BasicSoldier" type="CharacterBody2D" groups=["soldiers"]]
collision_layer = 512
collision_mask = 529
script = ExtResource("1_6yrql")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6yrql")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = SubResource("AtlasTexture_215r7")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_23aan")
}

[node name="ShellSpawnPoint" type="Marker2D" parent="."]
position = Vector2(10, -5)

[node name="BulletSpawnPoint" type="Marker2D" parent="."]
position = Vector2(7.5, -25)

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_6yrql")
max_health = 20.0
metadata/_custom_type_script = "uid://dgplhh06wmsnq"

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("3_4n3ff")
health_component = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://clpxtcfre43xh"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_slre4")
